# salon-coiffure-app

./: .gitignore  00_COMMENCER_ICI.txt  ARCHITECTURE.md  ARRETER.bat  ARRETER.ps1  CLAUDE.md  COMMANDES_RAPIDES.ps1  DEMARRAGE-COMPLET.ps1  DEMARRER-NOUVEAU.bat  DEMARRER.bat  DIAGNOSTIC.ps1  DOCUMENTATION.md  Dockerfile  FINAL.txt  INIT_DB.bat  INSTRUCTIONS.txt  LANCE.bat  LANCE_NEW.bat  PLAN_ARCHITECTURE.md  README.md  START.bat  amélioration28.txt  docker-compose.yml  launch.js  package-lock.json  parcours.txt  run-tests.ps1  scenario.txt  start.sh  test-api.js  test-securite.js
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: app.ts
backend/src/config/: database.ts  encryption.ts  redis.ts
backend/src/controllers/: adminController.ts  authController.ts  clienteController.ts  (+5 more)
desktop/: Cargo.toml  README.md  tauri.conf.json
desktop/src/: lib.rs  main.rs
e2e-tests/: global-setup.ts  playwright.config.ts  test-output.txt
e2e-tests/tests/: 01-public.spec.ts  02-auth.spec.ts  03-cliente.spec.ts  04-espace-pro.spec.ts  05-admin.spec.ts  06-parametres.spec.ts  07-visiteur-uc.spec.ts  08-cliente-uc.spec.ts  09-coiffeuse-uc.spec.ts  10-admin-uc.spec.ts  11-securite.spec.ts  helpers.ts
frontend/: next.config.ts  package-lock.json  package.json
frontend/public/: manifest.json  sw.js
frontend/src/: proxy.ts
mobile/: README.md  capacitor.config.json  package.json
shared/: package.json
shared/src/: index.ts  types.ts  validators.ts
(+45 files in other folders)
