[package]
name = "salon-coiffure-desktop"
version = "1.0.0"
description = "Application desktop Salon de Coiffure"
authors = ["Salon Beauté"]
license = "MIT"
repository = ""
default-run = "salon-coiffure-desktop"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "salon_coiffure_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "salon-coiffure-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
